--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>AK Travels</h1>
     <button class="button">Sign in</button>
     <button class="button">Sign up</button>
-    <img src="file:///C:/Users/murugesh/Downloads/drawkit-transport-scene-3%20(1).svg">
+    <img src="carimage.svg">
     <div>
         <h2>Signin</h2>
         <h3>Create your Account</h3>
